--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,6 +20,7 @@ body {
 margin: 0;
 padding: 0;
 box-sizing: border-box;
+overflow-x: hidden;
 }
 
 /* @layer utilities {
@@ -122,4 +123,9 @@ figcaption {
 input {
   outline: none;
 
+}
+
+.responsive-image {
+  width: 100% !important;
+  height: auto !important;
 }
